--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <html>
 	<head>
 		<title>HOME</title>
+		<link rel="stylesheet" type="text/css" href="index.css">
+
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	
 	<body>
 		<h1>April 1st, 2028</h1>
+		<br>
+
+		<div id="countdown"></div>
+		<script src="countdown.js"></script>
 	</body>
 </html>
