--- a/index.html
+++ b/index.html
@@ -1,18 +1,38 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 	<head>
 		<title>HOME</title>
-		<link rel="stylesheet" type="text/css" href="index.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	
 	<body>
-		<h1>April 1st, 2028</h1>
-		<br>
+		<h1>April 1st, 2028</h1><br>
+		<div id="countdown0"></div>
+		<br><br>
+		
+		<h1>December 13, 2029</h1><br>
+		<div id="countdown1"></div>
+		<br><br>
+		
+		<h1>September 24th, 2071</h1><br>
+		<div id="countdown2"></div>
+		<br><br>
+		
+		<h1>February 25th, 2075</h1><br>
+		<div id="countdown3"></div>
+		<br><br>
+		
+		<h1>August 6th, 2077</h1><br>
+		<div id="countdown4"></div>
+		<br><br>
+		
+		<h1>June 11th, 2088</h1><br>
+		<div id="countdown5"></div>
+		<br><br>
 
-		<div id="countdown"></div>
-		<script src="countdown.js"></script>
+		<script src="js/countdown.js"></script>
 	</body>
 </html>
